--- a/employee payslip layout/assets/pages/payroll.html
+++ b/employee payslip layout/assets/pages/payroll.html
@@ -231,7 +231,7 @@
         handleSidebarVisibility();
         window.addEventListener('resize', handleSidebarVisibility);
 
-        // Payslip 
+        // Payroll
         // Function to validate input for letters and spaces only
         function validateLettersAndSpacesOnly(event) {
             const input = event.target;
